# fty-srr

./: CMakeLists.txt  README.md
agent/: CMakeLists.txt
agent/misc/: fty_srr_test.cc
agent/src/: fty-srr-cmd.cc  fty-srr.h  fty_srr_exception.h  fty_srr_groups.cc  fty_srr_groups.h  fty_srr_manager.cc  fty_srr_manager.h  fty_srr_worker.cc  fty_srr_worker.h  locale_en_US.json
agent/src/dto/: common.cc  request.h  response.cc
agent/src/helpers/: data_integrity.h  utils.cc  utils.h  utilsReauth.cc
packaging/debian/: changelog  control  copyright
resources/: fty-srr.cfg.in  fty-srr.service.in
resources/sudoers.d/: fty_20_srr
server/: CMakeLists.txt
server/include/: fty-srr.h  fty_srr_groups.h
server/resources/: fty-srr-reboot.sh  fty-srr.cfg
server/src/: fty-srr-cmd.cc  fty-srr.cc  fty-srr.h  fty_srr_exception.h  fty_srr_groups.cc  fty_srr_groups.h  fty_srr_manager.cc  fty_srr_manager.h  fty_srr_worker.cc  fty_srr_worker.h  locale_en_US.json
server/src/dto/: common.cc  common.h  request.cc  request.h  response.h
server/src/helpers/: data_integrity.cc  data_integrity.h  passPhrase.cpp  passPhrase.h  utils.cc  utils.h  utilsReauth.cc  utilsReauth.h
